Improve exception handling, recovery

--- a/linux_test/Makefile
+++ b/linux_test/Makefile
@@ -14,6 +14,7 @@ FLAGS=-package oUnit \
       -g -thread
 
 all: run_test run_as
+# strace -f -e trace=file,desc
 	sudo ./run_test || true
 	$(MAKE) clean
 
