Don't let alcotest create the _tests output dir with full privs
we need full privs to check perm handling but if the linux_test/_tests directory doesn't exist, alcotest will create it before we drop privs. Once we drop privs, we can't write to the directory that alcotest made. @avsm, make sure you remove the current linux_test/_tests directory before you test again.

--- a/linux_test/Makefile
+++ b/linux_test/Makefile
@@ -15,6 +15,7 @@ FLAGS=-package oUnit \
 
 all: run_test run_as
 # strace -f -e trace=file,desc
+	mkdir -p _tests
 	sudo ./run_test || true
 	$(MAKE) clean
 
