Extract Handles module for handlespace

--- a/linux_test/Makefile
+++ b/linux_test/Makefile
@@ -41,6 +41,7 @@ run_test: test.ml
 		../_build/lib/out_osx_7_8.cmx \
 		../_build/lib/out.cmx \
 		../_build/lib/nodes.cmx \
+		../_build/lib/handles.cmx \
 		../_build/linux/profuse.cmx \
 		../_build/linux/lofs.cmx \
 		-linkpkg test.ml
