--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ sudo: required
 install: wget https://raw.githubusercontent.com/ocaml/ocaml-travisci-skeleton/master/.travis-opam.sh
 script: bash -ex .travis-opam.sh
 env:
-  - OCAML_VERSION=4.01
-  - OCAML_VERSION=4.02
+  matrix:
+    - OCAML_VERSION=4.01
+    - OCAML_VERSION=4.02
+  env:
+    - EXTRA_REMOTES="https://github.com/ocamllabs/opam-repo-dev.git"
