--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ env:
   matrix:
     - OCAML_VERSION=4.01
     - OCAML_VERSION=4.02
-  env:
+  global:
+    - TESTS=false
     - EXTRA_REMOTES="https://github.com/ocamllabs/opam-repo-dev.git"
